public/css/main.css
/* ... */
.p-l-r-20{
padding-left:20px;
padding-right: 20px;
}
.p-l-r-30{
padding-left:30px;
padding-right: 30px;
}
.m-0 {
margin: 0px !important;
}
.m-r-5 {
margin-right: 5px !important;
}
.m-r-10 {
margin-right: 10px !important;
}
.m-r-15 {
margin-right: 15px !important;
}
.m-l-5 {
margin-left: 5px !important;
}
.m-l-10 {
margin-left: 10px !important;
}
.m-l-15 {
margin-left: 15px !important;
}
.m-t-5 {
margin-top: 5px !important;
}
.m-t-0 {
margin-top: 0px !important;
}
.m-t-10 {
margin-top: 10px !important;
}
.m-t-15 {
margin-top: 15px !important;
}
.m-t-20 {
margin-top: 20px !important;
}
.m-t-30 {
margin-top: 30px !important;
}
.m-t-40 {
margin-top: 40px !important;
}
.m-t-60 {
margin-top: 60px !important;
}
.m-b-0 {
margin-bottom: 0px !important;
}
.m-b-5 {
margin-bottom: 5px !important;
}
.m-b-10 {
margin-bottom: 10px !important;
}
.m-b-15 {
margin-bottom: 15px !important;
}
.m-b-20 {
margin-bottom: 20px !important;
}
.m-b-30 {
margin-bottom: 30px !important;
}
html,body{ padding:0 ; margin: 0;overflow-x: hidden;    font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,\\5FAE\8F6F\96C5\9ED1,Arial,sans-serif;}
.bd-navbar{
    /* background: #24292e; */
    background: #4760de;
    border-bottom: solid 1px #7c8ee8;
}
.bd-navbar.bd-index{ position: absolute; top: 0; left: 0; z-index: 111; width: 100%; background-color: rgba(0, 0, 0, 0.4);border-bottom: solid 1px rgba(0, 0, 0, 0.4);}
.bd-navbar.bd-index .bg-dark{ background-color: rgba(0, 0, 0, 0) !important;}
.bd-navbar .bg-dark {
padding: 0;
background-color: #4760de!important;
}
.bd-navbar li.nav-item{ 
    font-weight: normal;
    font-size: 17px;
    margin: 0 30px;}
.logo{
color: #ffffff !important;
font-size: 32px;
font-weight: 600;
margin-right: 20px;
/* letter-spacing: .05em; */
/* line-height: 60px; */
cursor: pointer;
}
a.logo:hover{ text-decoration: none}
.logo i {
  color: #00ce72;
  font-style: normal;
}
.dropdown-item{ cursor: pointer;}
.bd-navbar a.reg {
background: transparent;
box-shadow: inset 0 0 0 2px #fff;
padding: 0 30px;
display: inline-block;
text-transform: uppercase;
letter-spacing: 1px;
transition: background .2s ease-in-out,box-shadow .2s ease-in-out,color .2s ease-in-out,transform .2s ease-in-out;
line-height: 34px;
text-decoration: none;
border: 0;
cursor: pointer;
 color: #fff;
height: 34px;
}
.mainbg{
/* background: url(../images/helloworld.jpg),#2b3137; */
/* background: url(../images/obbg.jpg),#2b3137; */
background: url(../images/loginbg.png),#4760de;
background-position: 0 0;
background-repeat: no-repeat;
background-size: cover;
/* color: hsla(0,0%,100%,.6); */
padding-bottom: 64px; position: relative;}

.bglog{
  background: url(../images/loginbg.png),#4760de;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-size: cover;
  color: hsla(0,0%,100%,.6);
  height: 100%;
}
.bglog body{ background: none;   color: hsla(0,0%,100%,.6);}
.mainbg .uppercase{
letter-spacing: 6px;
margin-right: -6px;
font-weight: 400;
}
.mainbg .large{  font-size: 64px!important; color: #fff;font-weight: 600; }
.card-box {
     /* background: #f8f8f8; */
    background-color: #fff;
    padding:6% 6% 8%;
    /* border: 1px solid rgba(255,255,255,.4); */
    background-clip: padding-box;
    color: #333 ;
}
.card-box .form-control,.footlogin .form-control{
background-color: #fff;
border: 1px solid rgba(0,0,0,.2);
border-radius: 0;
color: #333;
padding: 10px 12px;
height: 48px;
max-width: 100%;
margin-top: 20px;
-webkit-box-shadow: none;
box-shadow: none;
font-size: 16px;
-webkit-transition: all 300ms linear;
-moz-transition: all 300ms linear;
-o-transition: all 300ms linear;
-ms-transition: all 300ms linear;
transition: all 300ms linear;
}
.card-box  .loginbnt,.footlogin .loginbnt{
height: 50px;
line-height: 38px;
border: 2px solid #2ebc4f;
background: #2ebc4f;
color: #fff;
width: 100%;
font-size: 18px;
letter-spacing: 3px;
border-radius: 0 !important;
}
.card-box .text-white{ opacity: .8}
/* .bg-white .card-text{ max-height: 80px; font-size: 14px;  color: #666;overflow: hidden; } */
.fs12{ font-size: 12px;}
.fs14{ font-size: 14px;}
/* .bg-white, .btn-primary{  position: relative;  background-color: #eee;
border-color: rgba(18,119,235,.5);
color: #1277eb;} */
.bg-eee { background: #f0f3ff; position: relative;}
.headerbottom{    
    z-index: 2;
    position: absolute;
    bottom: -.8rem;
    background: #f0f3ff;
    width: 100%;
    height: 14%;
    -webkit-transform: skewY(2.5deg);
    transform: skewY(2.5deg);
    -webkit-transform-origin: bottom left;
    transform-origin: bottom left;}
.courseslist .card{
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.1);
    -webkit-transition: all .4s ease;
	-o-transition: all .4s ease;
    transition: all .4s ease;	 
    border:none;overflow: hidden;}   
.courseslist .card:hover{
	box-shadow: 0 5px 21px 0 rgba(0, 0, 0, 0.1);
}
.courseslist .card-img-top{     height: 208px;}
.card-text * { font-size:14px;}
.indexbtn{ border: 1px solid #2ebc4f; font-size: 14px; color: #00a95d }
.courseslist .card .card-title a{ color: #333; text-decoration: none}
.courseslist .card .card-title a:hover{ color: #2ebc4f; text-decoration: none}
.post{
	height: 208px;/*ÑƒÑ‚Ð¾Ñ‡Ð½Ð¸Ñ‚ÑŒ*/
	background-color: #000;/*ÑƒÑ‚Ð¾Ñ‡Ð½Ð¸Ñ‚ÑŒ*/
	line-height: 0;
	overflow: hidden;
}	
.post img{
	width: 100%;
	/*height: auto;*/
	height: 100%;/*ÑƒÑ‚Ð¾Ñ‡Ð½Ð¸Ñ‚ÑŒ*/
	-webkit-transition: opacity .4s, transform .4s ease;
	-o-transition: opacity .4s, transform .4s ease;
	transition: opacity .4s, transform .4s ease;
}
.post:hover img{
	opacity: 0.75;
	-webkit-transform: scale(1.2);
	-ms-transform: scale(1.2);
	-o-transform: scale(1.2);
	transform: scale(1.2);
}


.link-symbol {    display: inline-block;
transform: translateX(0);
transition: .2s;}
a:hover .link-symbol{transform: translateX(3px);}
/* .link-add {    display: inline-block;
transform: translateX(0);
transition: .2s;}
a:hover .link-add{transform: translateX(-3px);} */
/* ... */

